# game-v1

./: .gitignore  .pre-commit-config.yaml  README.md  TileSet.png.import  coins.bmp.import  default_bus_layout.tres  export_presets.cfg  game.gd  game.tscn  gold.tscn  label.gd  menu.tscn  mob.gd  mob.gd.uid  mob.tscn  player.gd  player.gd.uid  player.tscn  project.godot  pyproject.toml  Без названия.jpg.import
.github/workflows/: deploy.yml
Player/: player.tscn
Warrior/Warrior/: 1.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import  16.png.import  17.png.import  18.png.import  2.png.import  3.png.import  4.png.import  41.png.import  42.png.import  43.png.import  44.png.import  45.png.import  46.png.import  47.png.import  5.png.import  6.png.import  61.png.import  62.png.import  63.png.import  64.png.import  65.png.import  66.png.import  67.png.import  7.png.import  8.png.import  9.png.import
addons/gut/: double_tools.gd  doubler.gd  editor_caret_context_notifier.gd  gut.gd  gut_cmdln.gd  gut_menu.gd  gut_plugin.gd  gut_tracked_error.gd  hook_script.gd  logger.gd  method_maker.gd  one_to_many.gd  test.gd  utils.gd
assets/: icon.svg.import
assets/music/: 24 - Endless Hallway.mp3.import
autoload/: events.gd  events.gd.uid
dev_tools/: requirements.txt  setup.ps1
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DIARY.md  TECH_DEBTS.md
entities/enemies/: mob.tscn
entities/player/: player.gd  player.tscn
tests/: integrity.test.gd  integrity.test.gd.uid  mob_ai.test.gd  mob_ai.test.gd.uid
ui/: menu.gd  menu.tscn
(+106 files in other folders)
